--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
             </div>
             <div class="resume-item">
               <h4>Head Executive Searches and Recruitment</h4>
-              <h5>2017 - 2018</h5>
+              <h5>2008 - present</h5>
               <p><em>Makhawini Recruitment, Durban, SA</em></p>
               <ul>
                 <li>ADMINISTRATION
